Petal animation added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index File</title>
-</head>
-<body>
-    <h1>Been a while old friend</h1>
-    <h2>How have you been?</h2>
-</body>
+  </head>
+  <body>
+    <h1 style="text-align: center; color: rgb(255, 170, 184);">Been a while old friend, how have you been?</h1>
+    <div
+      class="tenor-gif-embed"
+      data-postid="17094122"
+      data-share-method="host"
+      data-aspect-ratio="1.78771"
+      data-width="100%"
+    >
+      <a
+        href="https://tenor.com/view/spring-fall-weather-peaceful-anime-gif-17094122"
+        >Spring Fall GIF</a
+      >from <a href="https://tenor.com/search/spring-gifs">Spring GIFs</a>
+    </div>
+    <script
+      type="text/javascript"
+      async
+      src="https://tenor.com/embed.js"
+    ></script>
+  </body>
 </html>
