--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
       async
       src="https://tenor.com/embed.js"
     ></script>
+    <a href="https://www.youtube.com/watch?v=cV2LfNl5eO8" target="_blank">Favorite Song</a>
   </body>
 </html>
