--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index File</title>
+    <title>Sakura</title>
   </head>
   <body>
     <h1 style="text-align: center; color: rgb(255, 170, 184);">Been a while old friend, how have you been?</h1>
