--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@
       async
       src="https://tenor.com/embed.js"
     ></script>
-    <a href="https://www.youtube.com/watch?v=cV2LfNl5eO8" target="_blank">Really good song</a>
+    <a href="https://www.youtube.com/watch?v=cV2LfNl5eO8" target="_blank">Really really good song</a>
   </body>
 </html>
