--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sakura</title>
   </head>
-  <body>
-    <h1 style="text-align: center; color: rgb(255, 170, 184);">Been a while old friend, how have you been?</h1>
+  <body style="background-color: rgb(255, 170, 184);">
+    <h1 style="text-align: center; color: rgb(255, 255, 255); font-family: Garamond, Arial, sans-serif;">Been a while old friend, how have you been?</h1>
     <div
       class="tenor-gif-embed"
       data-postid="17094122"
