--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     >
       <a
         href="https://tenor.com/view/spring-fall-weather-peaceful-anime-gif-17094122"
-        >Spring Fall GIF</a
+        >Spring Fall</a
       >from <a href="https://tenor.com/search/spring-gifs">Spring GIFs</a>
     </div>
     <script
